samples/_failures_safe/1761596834_27313d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c36722b3.c: In function ‘main’:
./samples/SAFE/__tmp_c36722b3.c:169: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_c36722b3.c:168:24: note: to match this ‘(’
  168 |                 fprintf(stderr
      |                        ^
./samples/SAFE/__tmp_c36722b3.c:168:17: error: too few arguments to function ‘fprintf’
  168 |                 fprintf(stderr
      |                 ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_c36722b3.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_c36722b3.c:168:17: error: expected declaration or statement at end of input
  168 |                 fprintf(stderr
      |                 ^~~~~~~
./samples/SAFE/__tmp_c36722b3.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c36722b3.c:168:17: error: expected declaration or statement at end of input
